--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,11 +6,16 @@
 
   .register3{
     align-self: center;
-    text-align: center;
-    justify-content:center;
-    border: 5px double #ddd;
-    margin: 8em;
-    padding: 10em;
+  text-align: center;
+  justify-content:center;
+  
+  margin: 10em;
+  padding: 8em;
+  font-weight: bold;
+    color: #6091d3;/*文字色*/
+    background:cover;
+    border: solid 3px #6091d3;/*線*/
+    border-radius: 10px;/*角の丸み*/
   }
   .box {
     width: 350px;
