--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
         <li><a href="#"><%= link_to "Top", tops_path, data: {"turbolinks" => false} %></a></li>
         <% if user_signed_in? %>
         <li><a href="#"><%= link_to "My Page", user_path(current_user.id), data: {"turbolinks" => false} %></a></li>
+        <li><a href="#"><%= link_to "SEARCH", perfumes_path, data: {"turbolinks" => false} %></a></li>
         <li><a href="#"><%= link_to "Logout", destroy_user_session_path, method: :delete, data: {"turbolinks" => false} %></a></li>
         <% end %> 
       </ul>
