--- a/app/views/perfumes/new.html.erb
+++ b/app/views/perfumes/new.html.erb
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="sindanbotan">
-                <%= f.submit "post" %>
+                <%= f.submit "診断" %>
             </div>
 
 <% end %>
