--- a/app/views/perfumes/show.html.erb
+++ b/app/views/perfumes/show.html.erb
@@ -78,5 +78,5 @@
                 <p>集中力を高める効果もあり</p>
 
                 <% end %>
-
+ <%= link_to "トップページへ", tops_path, data: {"turbolinks" => false}  %>
         </div>
