--- a/app/views/perfumes/index.html.erb
+++ b/app/views/perfumes/index.html.erb
@@ -1,18 +1,23 @@
+   
+    <div class="perfume">    
+          
+          
+       <h1 class="headline">
+           Game Diagnostics
+       </h1>
 
-        <title>香水診断スタート</title><!--ブラウザのタブのタイトルを指定-->
-
-      
-            <h1 class="headline">
-            <a>Perfu_me</a>
-            </h1>
-            <ul class="nav-list">
-                <li class="nav-list-item">about fragrance</li>
-                <li class="nav-list-item"><%= link_to "診断", perfumes_path, class: "link" %></li>
-            </ul>
-      
+       <div class="main">
 
         <div class="start">
-            <h6>Are you ready?</h6>
             <%= link_to "診断を始める", new_perfume_path, data: {"turbolinks" => false}  %>
         </div>
-    </body>
+
+        <div class="main2">
+        <img src="assets/image.png">
+        <h2>6つの質問からあなたにマッチしたゲームのジャンルやドハマりするゲームの特徴を導き出します</h2>
+        </div>
+
+
+        </div>
+        
+    </div>
