--- a/app/views/perfumes/index.html.erb
+++ b/app/views/perfumes/index.html.erb
@@ -1,22 +1,55 @@
    
     <div class="perfume">    
+       <div class="perfume2">
           
-          
-       <h1 class="headline">
-           Game Diagnostics
-       </h1>
+       <h5>
+           
+       </h5>
+       </div>
 
        <div class="main">
 
-        <div class="start">
-            <%= link_to "診断を始める", new_perfume_path, data: {"turbolinks" => false}  %>
+        <div class="wrapper">
+            <%= link_to("診断開始", new_perfume_path,data:{"turbolinks" => false} ,class: "button")  %>
         </div>
 
+     
         <div class="main2">
-        <img src="assets/image.png">
-        <h2>6つの質問からあなたにマッチしたゲームのジャンルやドハマりするゲームの特徴を導き出します</h2>
+
+        <div class="main3">
+        <div class="main10">
+        <div class="main11">
+        <div class="main12">
+         <h2>質問は全部で6つの2択になります</h2>
+        </div>
+        </div>
+        </div>
         </div>
 
+
+        <div class="main4">
+        <div class="main10">
+        <div class="main11">
+        <div class="main12">
+         <h3>選択肢であなたの潜在的意識を分析</h3>
+        </div>
+        </div>
+        </div>
+        </div>
+
+        <div class="main5">
+        <div class="main10">
+        <div class="main11">
+        <div class="main12">
+         <h4>ゲームのジャンル・特徴を導き出す</h4>
+        </div>
+        </div>
+        </div>
+        </div>
+
+        </div>
+
+        </div>
 
         </div>
         
