--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -29,55 +29,17 @@
   <h2>Game Navigation</h2>
   </div>
   
-  
+
   <% end %>
   </div>
 
-  <div class="introduction-block2">
-  <h2>ABOUT</h2>
-    
-    <br>
-    <h3>当サイトはゲームを</h3>
-    <div class="introduction-block2-omo">
-    <div class="introduction-block2-1">
-    <h1>知りたい！</h1>
-    </div>
-    <div class="introduction-block2-2">
-    <h1>楽しみたい！</h1>
-    </div>
-    <div class="introduction-block2-3">
-    <h1>やってみたい！</h1>
-    </div>
-    </div>
-    <br>
-    <h3>と思う皆様に</h3>
-    <br>
-    <div class="introduction-block2-omo1">
-    <div class="introduction-block2-4">
-    <h1>さらに知ってほしい！！</h1>
-    </div>
-    <div class="introduction-block2-5">
-    <h1>さらに楽しんでほしい！！</h1>
-    </div>
-    <div class="introduction-block2-6">
-    <h1>さらにやってほしい！！</h1>
-    </div>
-    </div>
-    <br>
-    <h3>
-    との思いで作成したサイトになります！
-    <br>
-    自分が持っている個性（ゲーム）を存分に共有・提供していきましょう！！！！
-    </h3>
-    
-</div>
 
   <div class="introduction-block3">
   <h2>Feature Overview</h2>
     <div class="introduction-block4">
      <div class="introduction-block3-top">
-      <h1>Top</h1>
-      <h3> 本サイトのトップページに移動</h3>
+      <h1>Search</h1>
+      <h3> ジャンル・性質の診断機能に移動</h3>
      </div>
         <div class="introduction-block3-mypage">
         <h1>My Page</h1>
