--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -431,7 +431,7 @@
 <div class="all">
   <h4><span>トレーディングカード</span></h4>
 </div>
-< <div class="registers-container">
+ <div class="registers-container">
 	<%  @study8.each.with_index(1) do |s,i| %>
 	 
 			<div class="register">
