--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -16,7 +16,7 @@
                     </svg>
                   </span>
                 </div>
-                <%= f.text_field :name, class: "form-control", placeholder: "ニックネーム", type: "nickname" %>
+                <%= f.text_field :name, class: "form-contro", placeholder: "ニックネーム", type: "nickname" %>
               </div> <!-- input-group.// -->
             </div> <!-- form-group// -->          
             <div class="form-group">
@@ -28,7 +28,7 @@
                     </svg>                  
                   </span>
                 </div>
-                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "メールアドレス", type: "email" %>
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-contro", placeholder: "メールアドレス", type: "email" %>
               </div> <!-- input-group.// -->
             </div> <!-- form-group// -->
             <div class="form-group">
@@ -40,7 +40,7 @@
                     </svg> 
                   </span>
                 </div>             
-                <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "パスワード（6文字以上）", type: "password" %>
+                <%= f.password_field :password, autocomplete: "new-password", class: "form-contro", placeholder: "パスワード（6文字以上）", type: "password" %>
               </div> <!-- input-group.// -->
             </div> <!-- form-group// -->
             <div class="form-group">
