--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -57,7 +57,7 @@
     border-style: none;
     box-sizing: border-box;
     width: 100%;
-    height: 31px;
+    height: 60px;
     border: 1px solid #a6a6a6;
     box-shadow: 0 1px 0 rgba(0,0,0,.07) inset;
     border-radius: 3px;
@@ -287,10 +287,10 @@ h1{
     justify-content: center;
   }
 
-  .form-control{
+  .form-contro{
     text-align: center;
     width: 80%;
-    height: 30px;
+    height: 40px;
   }
 
   .input-group{
