--- a/app/assets/stylesheets/perfumes.scss
+++ b/app/assets/stylesheets/perfumes.scss
@@ -19,10 +19,15 @@
     }
   }
 
+  .row{
+    margin-top: 50px;
+  }
+
   .perfume2 h5{
     color: #ffeba7;
     height: 150px;
     font-size: 50px;
+
   }
   
   .main12 h2{
@@ -233,6 +238,29 @@
   }
 
   .form-control{
-    width: 250px;
-    height: 40px;
+    color: #000000;
+    background:linear-gradient(#da4df8 ,#f86868);
+    width: 280px;
+    height: 55px;
+    border-radius: 20px;
+    font-size: 20px;
+  }
+  .sindanbotan{
+    font-family: 'Caveat', cursive;
+
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100px;
+  }
+  .sindanbotan input{
+    font-family: 'Caveat', cursive;
+
+    font-size: 50px;
+    width: 20%;
+    height: 80%;
+    border-radius: 20px;
+    background:linear-gradient(#da4df8 ,#fe8e8e);
+
   }
