--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -321,6 +321,7 @@ h1{
     background: cover;
     border-top: solid 5px #5d627b;
     box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
+    height: 150px;
   }
 
 
