--- a/app/assets/stylesheets/registers.scss
+++ b/app/assets/stylesheets/registers.scss
@@ -374,3 +374,24 @@ box-shadow: 0 3px 5px rgba(255, 255, 255, 0.22);
 }
 
 
+.field6 h2{
+  text-align: center;
+  align-self: center;
+  font-size: 10px;
+}
+
+.show-about h3{
+  text-align: center;
+  align-self: center;
+  font-size: 10px;
+}
+
+.show-sport{
+  height: 150px;
+}
+
+.show-sport p{
+  text-align: end;
+  align-self: end;
+}
+
