--- a/app/views/registers/edit.html.erb
+++ b/app/views/registers/edit.html.erb
@@ -59,9 +59,13 @@
 
 
   <h5>コメント</h5>
+ 
+
   <div class="field6">
+    <h2>100字以内</h2>
+
   <%=f.text_area :about, :size=>"60x10" %>
-  <p>注:300字以下
+
   </div>
 
   <div class="field7">
