--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -52,12 +52,13 @@
     </div>
     <div class="show-sport">
     <h2>E-sportの採用</h2>
-      <p><%= @register.sport %></p>
+      <h2><%= @register.sport %></h2>
     </div>
  
     
 <div class="show-about">
 <h2>コメント</h2>
+<h3>100字以内</h3>
 <div class="show-about-box">
   <p><%= @register.about %></p>
 </div>
